# streaming_demo

./: .gitignore  .pseudo_docker.yml  README.md  create_grafana_volume.sh  docker-compose.yml
grafana/dashboards/: example-dashboard.json
grafana/provisioning/datasources/: datasource.yml
stream_app/: Dockerfile  average_analyzer.py  counter_analyzer.py  pyproject.toml  requirements.txt  score_aggregator.py  transaction_producer.py  working_requirements.txt
stream_app/src/fraud_detection.egg-info/: SOURCES.txt
stream_app/src/generators/: user_store_manager.py
stream_app/src/models/: data_models.py
stream_app/tests/: test_transaction_generators.py  test_user_store_manager.py
stream_app/tmp/output/2024-12-04--19/: .part-0-0.inprogress.8d4dcde6-679b-4beb-a318-45ac190195e2  .part-0-0.inprogress.eb625c13-636b-4802-b9b5-3eef53b84b80  part-0-0
stream_app/txn-kafka-producer/: Dockerfile  requirements.txt  transaction_producer.py
stream_app/txn-kafka-producer/src/fraud_detection.egg-info/: PKG-INFO  top_level.txt
stream_app/txn-kafka-producer/src/generators/: transaction_generators.py
stream_app/txn-kafka-producer/src/models/: data_models.py
stream_app/txn-processor/: Dockerfile  aggregated_score_producer.py  average_analyzer.py  counter_analyzer.py  proximity_analyzer.py  requirements.txt  score_aggregator.py  start.sh
